# Sharkguard-wallet-detector

./: .env.example  Dockerfile  PROJECT_REPORT.txt  README.md  app.py  cli.py  desktop.ini  netlify.toml  render.yaml  requirements.txt  run_app.py  start_sharkguard.bat
api/: main.py  requirements.txt
data/: simulate.py  simulated_features.csv
data/sharkguard-backend/: .env.example  README.md  pyproject.toml  requirements.txt
data/sharkguard-backend/app/: main.py
data/sharkguard-backend/app/api/: analyze.py  routes.py
data/sharkguard-backend/app/core/: config.py
data/sharkguard-backend/app/models/: ml_model.py
data/sharkguard-backend/app/schemas/: analyze.py
data/sharkguard-backend/app/services/: analyzer.py  etherscan_client.py
data/sharkguard-backend/app/utils/: helpers.py
data/sharkguard-backend/tests/: test_analyze.py
fakeacc/: __init__.py  core.py  heuristics.py
models/: isolation_model.joblib  test_model.joblib
scripts/: train_model.py
utils/: etherscan.py
web/: index.html
